# menu-text-detection

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  compose.yml  pyproject.toml  requirements.txt  train.ipynb
.github/workflows/: sync.yml
Menu/: __init__.py  config.py  menu.py
Menu/engine/: __init__.py  base.py  original.py  vertex2text_prompt.py  vertex2text_prompt_BiDir.py
analysis/: __init__.py  gpt.py  tools.py
detection/: __init__.py  gcloud.py
donut/: README.md  lightning_module.py  test.py  train.py
donut/config/: train.yaml
donut/test/: Fine_tune_Donut_on_a_custom_dataset_(CORD)_with_PyTorch_Lightning.ipynb  test.ipynb  test2.py
examples/: metadata.jsonl
menu/: donut.py  utils.py
menu/llm/: __init__.py  base.py  gemini.py  openai.py
tools/: prompt.txt  schema.json  schema_gemini.json  schema_openai.json
utils/: __init__.py  image_processor.py  tmp.py
utils/analysis/: gpt.py  tools.py
utils/detection/: __init__.py  gcloud.py  vertex.py
web/: package.json  pnpm-lock.yaml  svelte.config.js
web/src/: app.html
web/src/routes/: +page.svelte
