[project]
name = "menu-text-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "google-genai>=1.14.0",
    "gradio>=5.29.0",
    "huggingface-hub>=0.31.1",
    "matplotlib>=3.10.1",
    "notebook>=7.4.2",
    "openai>=1.77.0",
    "pillow>=11.2.1",
    "protobuf>=6.30.2",
    "sentencepiece>=0.2.0",
    "transformers>=4.51.3",
]
