[project]
authors = [{name = "ryanlinjui", email = "ryanlinjui@gmail.com"}]
name = "menu-text-detection"
version = "0.1.0"
description = "Extract structured menu information from images into JSON using a fine-tuned Donut E2E model."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "google-genai>=1.14.0",
    "gradio>=5.29.0",
    "huggingface-hub>=0.31.1",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "notebook>=7.4.2",
    "openai>=1.77.0",
    "pillow>=11.2.1",
    "pillow-heif>=0.22.0",
    "protobuf>=6.30.2",
    "pytorch-lightning>=2.5.2",
    "sentencepiece>=0.2.0",
    "tensorboardx>=2.6.2.2",
    "transformers==4.49",
    "torch==2.4.1",
    "donut-python>=1.0.9",
]
